Fix ForumWidget not visible in dark theme

--- a/src/components/ForumWidget/styles.module.scss
+++ b/src/components/ForumWidget/styles.module.scss
@@ -20,7 +20,8 @@
     text-decoration: none;
   }
   & span {
-    color: #1C1E21;
+    color: var(--ifm-font-color-base);
+    color-scheme: var(--ifm-color-scheme);
   }
 }
 
